--- a/bookstore/src/main/resources/templates/booklist.html
+++ b/bookstore/src/main/resources/templates/booklist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.thymeleaf.org"></html>
 <head>
-   
+   <meta charset="UTF-8">
    <h1>Books</h1>
    <style>
       table{
@@ -18,12 +18,23 @@
       th{
          background-color: #f2f2f2;
       }
+      .button {
+            padding: 10px 20px;
+            color: white;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
    </style>
 
 </head>
-
 <body>
    <title>Booklist</title>
+   
    <table>
       <thead>
           <tr>
@@ -41,8 +52,13 @@
               <td th:text="${book.publicationYear}">Publication Year</td>
               <td th:text="${book.isbn}">ISBN</td>
               <td th:text="${book.price}">Price</td>
+              <td>
+               <a th:href="@{/deletebook/{id}(id=${book.id})}" >Delete</a>
+              </td>
           </tr>
          </tbody>
       </table>
+      <br><br>
+      <a class="button" href="/addbook">Add New Book</a>
 </body>
 </html>
