--- a/bookstore/src/main/resources/templates/addbook.html
+++ b/bookstore/src/main/resources/templates/addbook.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"></html>
+<html xmlns="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Add New Book</title>
 </head>
 <body>
     <h1>Add New Book</h1>
@@ -22,9 +22,12 @@
         <label for="price">Price:</label>
         <input type="number" step="0.01" id="price" th:field="*{price}" />
         <br/>
-        <button type="submit">Add Book</button>
-
-        
+        <label for="category">Category:</label>
+        <select id="category" th:field="*{category.id}">
+            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">Category</option>
+        </select>
+        <br/>
+        <button type="submit">Add Book</button>  
     </form>
 </body>
 </html>
