--- a/bookstore/src/main/resources/templates/addbook.html
+++ b/bookstore/src/main/resources/templates/addbook.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html xmlns="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Add New Book</title>
 </head>
+
 <body>
     <h1>Add New Book</h1>
     <form action="#" th:action="@{/addbook}" th:object="${book}" method="post">
         <label for="title">Title:</label>
         <input type="text" id="title" th:field="*{title}">
-        <br/>
+        <br />
         <label for="author">Author:</label>
         <input type="text" id="author" th:field="*{author}" />
-        <br/>
+        <br />
         <label for="publicationYear">Publication Year:</label>
         <input type="number" id="publicationYear" th:field="*{publicationYear}" />
-        <br/>
+        <br />
         <label for="isbn">ISBN:</label>
         <input type="text" id="isbn" th:field="*{isbn}" />
-        <br/>
+        <br />
         <label for="price">Price:</label>
         <input type="number" step="0.01" id="price" th:field="*{price}" />
-        <br/>
+        <br />
         <label for="category">Category:</label>
         <select id="category" th:field="*{category.id}">
-            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">Category</option>
+            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">Category
+            </option>
         </select>
-        <br/>
-        <button type="submit">Add Book</button>  
+        <br />
+        <button type="submit">Add Book</button>
     </form>
 </body>
+
 </html>
