--- a/bookstore/src/main/resources/templates/addbook.html
+++ b/bookstore/src/main/resources/templates/addbook.html
@@ -2,36 +2,44 @@
 <html xmlns="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
     <title>Add New Book</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
     <h1>Add New Book</h1>
-    <form action="#" th:action="@{/addbook}" th:object="${book}" method="post">
-        <label for="title">Title:</label>
-        <input type="text" id="title" th:field="*{title}">
-        <br />
-        <label for="author">Author:</label>
-        <input type="text" id="author" th:field="*{author}" />
-        <br />
-        <label for="publicationYear">Publication Year:</label>
-        <input type="number" id="publicationYear" th:field="*{publicationYear}" />
-        <br />
-        <label for="isbn">ISBN:</label>
-        <input type="text" id="isbn" th:field="*{isbn}" />
-        <br />
-        <label for="price">Price:</label>
-        <input type="number" step="0.01" id="price" th:field="*{price}" />
-        <br />
-        <label for="category">Category:</label>
-        <select id="category" th:field="*{category.id}">
-            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">Category
-            </option>
-        </select>
-        <br />
-        <button type="submit">Add Book</button>
-    </form>
+    <div>
+        <form action="#" th:action="@{/save}" th:object="${book}" method="post">
+            <label for="title">Title:</label>
+            <input type="text" id="title" th:field="*{title}">
+            <div style="clear: both; display: block; height: 10px;"></div>
+            <br />
+            <label for="author">Author:</label>
+            <input type="text" id="author" th:field="*{author}" />
+            <div style="clear: both; display: block; height: 10px;"></div>
+            <br />
+            <label for="publicationYear">Publication Year:</label>
+            <input type="number" id="publicationYear" th:field="*{publicationYear}" />
+            <div style="clear: both; display: block; height: 10px;"></div>
+            <br />
+            <label for="isbn">ISBN:</label>
+            <input type="text" id="isbn" th:field="*{isbn}" />
+            <div style="clear: both; display: block; height: 10px;"></div>
+            <br />
+            <label for="price">Price:</label>
+            <input type="number" step="0.01" id="price" th:field="*{price}" />
+            <div style="clear: both; display: block; height: 10px;"></div>
+            <br />
+            <label for="category">Category:</label>
+            <select id="category" th:field="*{category.id}">
+                <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">Category
+                </option>
+            </select>
+            <div style="clear: both; display: block; height: 10px;"></div>
+            <br />
+            <input type="submit" value="Save"></input>
+        </form>
+    </div>
 </body>
 
 </html>
