--- a/bookstore/src/main/resources/templates/booklist.html
+++ b/bookstore/src/main/resources/templates/booklist.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html xmlns="http://www.thymeleaf.org">
+
 <head>
-   <meta charset="UTF-8">
-   <title>Booklist</title>
-   <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
+    <title>Booklist</title>
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
+
 <body>
-   <h1>Books</h1>
-   <a href="/addbook" class="btn btn-success mb-3">Add New Book</a>
-   <table class="table table-striped">
-      <thead>
-          <tr>
-              <th>Title</th>
-              <th>Author</th>
-              <th>Publication Year</th>
-              <th>ISBN</th>
-              <th>Price</th>
-              <th>Category</th>
-          </tr>
-      </thead>
-      <tbody>
-        <tr th:each="book : ${books}">
-            <td th:text="${book.title}">Title</td>
-            <td th:text="${book.author}">Author</td>
-            <td th:text="${book.publicationYear}">Publication Year</td>
-            <td th:text="${book.isbn}">ISBN</td>
-            <td th:text="${book.price}">Price</td>
-            <td th:text="${book.category.name}">Category</td>
-            <td>
-                <a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-primary">Edit</a>
-                <a th:href="@{/deletebook/{id}(id=${book.id})}" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>        
-          </tr>
-      </tbody>
-   </table>
-   <br><br>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>Books</h1>
+            </div>
+            <div class="col-md-4">
+                <h3>Welcome <span sec:authentication="name"></span>! </h3>
+            </div>
+            <div class="col-md-4" style="padding:20px 0">
+                <form th:action="@{/logout}" method="post">
+                    <input type="submit" value="Sign Out" class="btn btn-sm btn-secondary" />
+                </form>
+                <a href="/addbook" class="btn btn-success mb-3">Add New Book</a>
+            </div>
+        </div>
+
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Publication Year</th>
+                    <th>ISBN</th>
+                    <th>Price</th>
+                    <th>Category</th>
+                    <th sec:authorize="hasRole('ADMIN')"> </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="book : ${books}">
+                    <td th:text="${book.title}">Title</td>
+                    <td th:text="${book.author}">Author</td>
+                    <td th:text="${book.publicationYear}">Publication Year</td>
+                    <td th:text="${book.isbn}">ISBN</td>
+                    <td th:text="${book.price}">Price</td>
+                    <td th:text="${book.category.name}">Category</td>
+                    <td sec:authorize="hasRole('ADMIN')">
+                        <a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-primary">Edit</a>
+                        <a th:href="@{/deletebook/{id}(id=${book.id})}" class="btn btn-danger">Delete</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
