--- a/bookstore/src/main/resources/templates/login.html
+++ b/bookstore/src/main/resources/templates/login.html
@@ -4,8 +4,12 @@
 
 <head>
     <title>Spring Security </title>
-    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
-    <style>
+    <link type="text/css" rel="stylesheet" href="/src/main/resources/static/css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
+
+</head>
+
+<body>
+     <style>
         body,
         html {
             height: 100%;
@@ -63,11 +67,7 @@
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
-    </style>
-</head>
-
-<body>
-
+    </style> 
     <form th:action="@{/login}" method="post">
         <div class="alert alert-danger" th:if="${param.error}">
             Invalid username and password.
